--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,15 @@
 [package]
-name = "jt-inner"
+name = "jt"
 version = "0.1.0"
 edition = "2021"
 description = "Jump to directory using tags as shorthand."
 license = "MIT OR Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/Da1sypetals/jumptag"
+
+[[bin]]
+name = "jt-inner"
+path = "src/main.rs"
 
 [dependencies]
 redb = "2.2.0"
