--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "jumptag"
-version = "0.1.0-alpha.0"
+version = "0.1.1"
 edition = "2021"
 description = "Jump to directory using tags as shorthand."
 license = "MIT OR Apache-2.0"
